--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = ""
 authors = ["Ryan Schuetzler <ryan@schuetzler.net>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.9,<3.11"
+numpy = "^1.21.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
